--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,12 @@
-name: Renametag
-main: Lovetwice1012\Renametug\Main
-version: 2.0.0
+name: rouya
+main: Lovetwice1012\rouya\Main
+version: 1.0.0
 api: [3.0.0, 4.0.0]
 load: POSTWORLD
 author: Lovetwice1012
-description: 頭の上変更
+description: 牢屋
 
 commands:
-  atama:
-    description: 頭の上を変更します。
-    usage: /atama 変更したいユーザーの名前　変更後の頭の上に表示される文章
+  rouya:
+    description: 牢屋にぶち込みます。
+    usage: /rouya ユーザーの名前
